# sistema-camaras-ufro-limpio

./: .env.example  .gitignore  .railway-rebuild  CHECKLIST_DEPLOY.md  CORRECCIONES_SISTEMA_CAMARAS_UFRO.md  CREDENCIALES_CORREGIDAS_DEPLOYMENT.md  DEPLOY_DIAGNOSTICO.md  DESCARGAR_Y_SUBIR_COMPLETO.md  Dockerfile  GIT_PUSH_AUTOMATICO.md  INSTRUCCIONES_DEPLOY.md  INSTRUCCIONES_DEPLOY_CORREGIDO.md  Procfile  Procfile.txt  README.md  REPORTE_ERRORES_RUTAS_TEMPLATES.md  REPORTE_FINAL_DEPLOY.md  app.py  app_backup.py  app_diagnostico.py  app_min.py  app_minimal.py  app_original_backup.py  app_py_correccion_final.py  app_simple.py  app_stable.py  app_test_completo.py  apply_corrections.py  config.py  configurar_railway.py  crear_archivos_locales.py  create_favicon.py  create_superadmin_min.py  db_setup.py  db_setup_fixed.py  diagnostico_entorno.py  diagnostico_railway.py  emergency_recovery.py  emergency_recovery_updated.py  endpoint_limpiar.py  (+41 more)
.railway/: config.toml
docs/: analisis_app_py_completo.md  deployment_guide.md  esquema_datos_planillas.md  inventario_templates.md  resumen_archivos_analizados.md
migrations/: 001_initial_tables.py  __init__.py
models/: README.md  README_EQUIPO_TECNICO.md  README_PUERTOS_SWITCH.md  README_catalogo_tipo_falla.md  README_network_connections.md  RESUMEN_COMPLETADO.md  RESUMEN_PUERTO_SWITCH_COMPLETADO.md  __init__.py  _datos_iniciales.py  app.py  base.py  base.py.bak  camara.py  camaras.py  catalogo_tipo_falla.py  database.py  datos_iniciales.py  ejemplo_equipo_tecnico.py  ejemplo_network_connections.py  ejemplo_puertos_switch.py  ejemplo_uso.py  equipo.py  equipo.py.bak  equipo_tecnico.py  falla.py  falla_comentario.py  fia_logic.py  fotografia.py  fuente.py  fuente_poder.py  gabinete.py  historial_estado_equipo.py  install.py  mantenimiento.py  models.txt  network_connections.py  nvr.py  puertos_switch.py  requirements.txt  switch.py  (+8 more)
planillas/: Catalogo_Tipos_Fallas.xlsx  Ejemplos_Fallas_Reales.xlsx  Equipos_Tecnicos.xlsx  Fallas_Actualizada.xlsx  Fuentes_Poder.xlsx  Gabinetes.xlsx  Listadecámaras.xlsx  Listadecámaras_modificada.xlsx  (+6 more)
(+259 files in other folders)
