[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sistema-camaras-ufro"
version = "1.0.0"
description = "Sistema de Gestión de Cámaras y Equipos de Seguridad — Universidad de La Frontera"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Charles Jelvez", email = "charles.jelvez@ufrontera.cl" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Security"
]
dependencies = [
    "Flask==3.0.0",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "SQLAlchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "Werkzeug==3.0.1",
    "bcrypt==4.1.3",
    "PyJWT==2.8.0",
    "itsdangerous==2.1.2",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://sistema-camaras-ufro-limpio-production.up.railway.app"
Repository = "https://github.com/ultimocorreoexistente-prog/sistema-camaras-ufro-limpio"
Issues = "https://github.com/ultimocorreoexistente-prog/sistema-camaras-ufro-limpio/issues"

[project.scripts]
start = "gunicorn app:app --workers 2 --timeout 30 --bind 0.0.0.0:$PORT"

[tool.hatch.build.targets.wheel]
packages = ["models", "routes", "services", "utils"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitignore",
    ".env.example",
    "Dockerfile",
    "Procfile",
    "muchos.txt",
    "mas.txt",
    "revisar.txt",
    "gabinete.py.txt"
]